2011-01-20 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c:
	* src/nact/base-application.h (base_application_get_icon_name):
	Removed function.

	* src/nact/base-application.c:
	* src/nact/base-application.h
	(initialize_i18n, initialize_application_name, get_application_name,
	initialize_default_icon, get_icon_name, initialize_gtk):
	Remove virtual methods.

	* src/nact/nact-application.c
	(appli_get_application_name, appli_get_icon_name): Removed functions.

	* src/nact/nact-application.c (nact_application_new_with_args):
	Make NactApplication initializes with these new properties.

	* src/nact/base-application.c:
	* src/nact/base-application.h: Define new properties.

	* src/nact/base-application-class.h: Removed file.

	* src/nact/Makefile.am:
	* src/nact/base-application.h:
	* src/nact/base-window-class.h:
	* src/nact/base-window.h: Updated accordingly.

	* src/nact/base-application-class.h (main_window_new):
	* src/nact/base-application.c (application_do_run):
	* src/nact/nact-application.c
	* src/nact/nact-main-window.h (appli_main_window_new):
	Move the creation of the main window to the main_window_new() method.
	Remove base_application_get_main_window() function.

	* src/nact/base-application-class.h (manage_options):
	* src/nact/base-application.c:
	* src/nact/nact-application.c: Return exit code of the program.

	* src/nact/nact-tree-model-dnd.c
	(drop_inside, is_drop_possible, drop_uri_list):
	* src/nact/base-window.c (is_main):
	Remove base_application_get_main_window() invocations.

	* src/nact/nact-main.c: Renamed as main.c

	* src/nact/Makefile.am: Updated accordingly.

	* tools/Makefile.am: Generate the check-header.c source if it is missing.

	* src/plugin-tracker/na-tracker-dbus.c:
	* src/plugin-tracker/na-tracker-dbus.h:
	* src/plugin-tracker/na-tracker.c:
	* src/plugin-tracker/na-tracker.h: Cosmetic changes in src/plugin-tracker headers.

	* src/plugin-menu/nautilus-actions.c: